Correct look for active indication on mobile menu.

--- a/src/output.css
+++ b/src/output.css
@@ -1476,6 +1476,10 @@ video {
   padding-top: 1.75rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
